# mlops_bootcamp

./: .gitignore  README.md  pyproject.toml
notebooks/week_1/: basic_assignment.ipynb
