[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["anitaokoh <sleekymeeratura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.25.2"
pandas = "^2.1.0"
numpy = "^1.25.2"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
